bld/k8s/bases/common/rendering.yaml
apiVersion: v1
kind: Service
metadata:
  name: rendering
spec:
  selector:
    app: rendering
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rendering
  labels:
    app: rendering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rendering
  template:
    metadata:
      labels:
        app: rendering
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: rendering
        image: rendering
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 1500m
      imagePullSecrets:
      - name: sitecore-docker-registry
