bld/k8s/bases/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: $(cm-hostname)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cm
                port:
                  number: 80
    - host: $(id-hostname)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: id
                port:
                  number: 80

    - host: $(cd-hostname)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rendering
                port:
                  number: 80
  tls:
  - hosts:
    - $(cm-hostname)
    - $(id-hostname)
    - $(cd-hostname)
    secretName: letsencrypt-tls-sitecore
